@@ -11,6 +11,7 @@ home-manager refactor:
   these profiles can include some extra configuration under /hosts/hostname/users/username/preferences.nix that will be exclusive to that machine. (this file is no longer required)
 Assigned the proper git config to iron
 readd thePumpkinPatch to the army
+- isolate portainer from cypher
 
 
 11-04-2024:
